--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>crystal-play-school-web</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>CrystalPLay - A kids learnign universe</title>
+    <meta name="description" content="Crystal Play School is leading kids play school in Delhi NCR with all the leading facilities." />
+    <meta name="author" content="Md Arsalan" />
 
     <meta property="og:title" content="crystal-play-school-web" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Crystal Play School is leading kids play school in Delhi NCR with all the leading facilities." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/crystalfav.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@crystalplay" />
+    <meta name="twitter:image" content="/src/assets/crystalfav.png" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
